# py-frontmatter

./: .justfile  .pre-commit-config.yaml  CHANGELOG.md  README.md  prek.toml  pyproject.toml  requirements.txt  ruff_defaults.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: check.yml  codeql.yml  dependency-review.yml  release.yml  test.yml
requirements/: requirements-hatch-static-analysis.txt  requirements-hatch-test.py3.12.txt  requirements-types.txt
src/py_frontmatter/: __about__.py  __init__.py
src/py_frontmatter/console/: application.py
src/py_frontmatter/console/commands/: __init__.py  add_item.py  add_tag.py  base_command.py  get.py  remove_item.py  remove_tag.py  set.py
src/py_frontmatter/core/: document.py  dump.py  load.py
tests/console/: conftest.py  test_add_item.py  test_add_tag.py  test_get.py  test_remove_item.py  test_remove_tag.py  test_set.py
tests/core/: test_round_trip.py
