[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "py-frontmatter"
description = "Manipulate YAML front matter."
readme = "README.md"
keywords = []
license = { text = "Apache-2.0" }
authors = [
  { name = "YEUNG King On", email = "koyeung@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "jsonpath-ng>=1.5.3",
  "ruamel-yaml>=0.17.21",
]
urls.Documentation = "https://github.com/koyeung/py-frontmatter#readme"
urls.Issues = "https://github.com/koyeung/py-frontmatter/issues"
urls.Source = "https://github.com/koyeung/py-frontmatter"
scripts.frontmatter = "py_frontmatter.console.application:main"

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3.3",
  "pytest-cov>=5",
  "pytest-xdist>=3.6.1",
]

[tool.hatch]
version.source = "vcs"
version.raw-options = { local_scheme = "no-local-version" }

[tool.uv]
exclude-newer = "1 week"

[tool.ruff]
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN", # let mypy do the checking
  "COM", # let formatter do the checking
  "D",   # not much on doc style
]
lint.per-file-ignores."**/tests/*" = [
  "S", # ok for security for tests
]
lint.isort.known-first-party = [
  "src",
]
lint.preview = false

[tool.mypy]
ignore_missing_imports = true

[tool.coverage]
run.branch = true
run.omit = [
  "src/py_frontmatter/__about__.py",
]
run.parallel = true
run.source_pkgs = [
  "py_frontmatter",
  "tests",
]
paths.py_frontmatter = [
  "src/py_frontmatter",
  "*/py-frontmatter/src/py_frontmatter",
]
paths.tests = [
  "tests",
  "*/py-frontmatter/tests",
]
report.exclude_lines = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "no cov",
]
